# ASTER-OCR-Model-PyTorch

./: ASTER_Tutorial.ipynb  README.md  datasets.py  pyproject.toml  requirements.txt
src/: requirements.txt
